fixed the .content's top padding
100 is too much i lowered it to 50px

--- a/fr/styles.css
+++ b/fr/styles.css
@@ -252,7 +252,7 @@ h2 {
 .content {
     position: relative;
     padding-bottom: 60px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 .roblox {
     background-color: #F56B00;
